2022-07-26-laptop/not solved yet_YJ

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+	<!-- <script type="text/javascript" src="index.js"></script> -->
 	<script type="text/javascript" src="index.js"></script>
 	<link rel="stylesheet" href="index.css">
     <title>index</title>
