--- a/Key_.html
+++ b/Key_.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Key_.css">
-    <script type="text/javascript" src="index.js"></script>
+    <!-- <script type="text/javascript" src="Data_Send.js"></script> -->
     <script type="text/javascript" src="MenuData.js"></script>
     <script type="text/javascript" src="Key_Search.js"></script>
 
